@@ -12,7 +12,7 @@ buildscript {
         classpath 'org.yaml:snakeyaml:1.14'
 
         //Included for NewRelic
-        classpath "com.newrelic.agent.android:agent-gradle-plugin:5.4.0"
+        classpath "com.newrelic.agent.android:agent-gradle-plugin:5.4.1"
 
         classpath 'com.facebook.testing.screenshot:plugin:0.4'
 
@@ -67,18 +67,18 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:3.23.1'
     compile 'com.google.android.gms:play-services-plus:8.4.0'
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
-    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.code.gson:gson:2.4'
     compile 'de.greenrobot:eventbus:2.4.1'
     compile 'com.squareup.phrase:phrase:1.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton.retrofit:retrofit1-okhttp3-client:1.0.2'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
@@ -99,7 +99,7 @@ dependencies {
     }
 
     //New Relic Integration
-    compile 'com.newrelic.agent.android:android-agent:5.4.0'
+    compile 'com.newrelic.agent.android:android-agent:5.4.1'
 
     // Parse notification service
     compile 'com.parse:parse-android:1.13.0'
@@ -110,7 +110,7 @@ dependencies {
     provided 'org.roboguice:roboblender:3.0.1'
 
     // For the optional Nullable annotation
-    compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.android.support:support-annotations:23.3.0'
 
     // test project configuration
     testCompile 'junit:junit:4.12'
@@ -275,7 +275,6 @@ android {
     testOptions { 
          unitTests.all {
              maxHeapSize '1g'
-             jvmArgs '-XX:MaxPermSize=512m'
          }
     }
 }
